<resources>
    <string name="app_name">LoginApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_textview">Username:</string>
    <string name="password_textview">Password:</string>
    <string name="action_sign_up">Singup</string>
    <string name="sign_up_message_success">You have successfully signed Up. For login, click back to Login page.</string>
    <string name="sign_up_message_failed">Signup is Failed. Maybe the email is repetitive.</string>
    <string name="enter_email">Please enter username.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="enter_values">Please enter username and password.</string>
    <string name="valid_email">Please enter a valid email address.</string>
    <string name="confirm_pass">Password confirm your password.</string>
    <string name="full_name">Full Name:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="signup">Signup</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="signup_page_name">Signup</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="admin">Admin</string>
    <string name="watch_profile">Watch Profile</string>
</resources>